Source/WebCore/html/track/TextTrackList.cpp
@@ -30,6 +30,7 @@
 #include "TextTrackList.h"
 
 #include "EventNames.h"
+#include "LoadableTextTrack.h"
 #include "ScriptExecutionContext.h"
 #include "TextTrack.h"
 #include "TrackEvent.h"
@@ -51,29 +52,60 @@ TextTrackList::~TextTrackList()
 
 unsigned TextTrackList::length() const
 {
-    return m_tracks.size();
+    return m_addTrackTracks.size() + m_elementTracks.size();
 }
 
 TextTrack* TextTrackList::item(unsigned index)
 {
-    if (index < m_tracks.size())
-        return m_tracks[index].get();
+    // 4.8.10.12.1 Text track model
+    // The text tracks are sorted as follows:
+    // 1. The text tracks corresponding to track element children of the media element, in tree order.
+    // 2. Any text tracks added using the addTextTrack() method, in the order they were added, oldest first.
+    // 3. Any media-resource-specific text tracks (text tracks corresponding to data in the media
+    // resource), in the order defined by the media resource's format specification.
+
+    if (index < m_elementTracks.size())
+        return m_elementTracks[index].get();
+
+    index -= m_elementTracks.size();
+    if (index < m_addTrackTracks.size())
+        return m_addTrackTracks[index].get();
+
     return 0;
 }
 
 void TextTrackList::append(PassRefPtr<TextTrack> track)
 {
     RefPtr<TextTrack> trackRef = track;
-    m_tracks.append(trackRef);
+    
+    if (trackRef->trackType() == TextTrack::AddTrack)
+        m_addTrackTracks.append(trackRef);
+    else if (trackRef->trackType() == TextTrack::TrackElement) {
+        // Insert tracks added for <track> element in tree order.
+        size_t index = static_cast<LoadableTextTrack*>(trackRef.get())->trackElementIndex();
+        m_elementTracks.insert(index, trackRef);
+    } else
+        ASSERT_NOT_REACHED();
+
     scheduleAddTrackEvent(trackRef);
 }
 
 void TextTrackList::remove(PassRefPtr<TextTrack> track)
 {
-    size_t index = m_tracks.find(track);
+    Vector<RefPtr<TextTrack> >* tracks = 0;
+
+    if (track->trackType() == TextTrack::TrackElement)
+        tracks = &m_elementTracks;
+    else if (track->trackType() == TextTrack::AddTrack)
+        tracks = &m_addTrackTracks;
+    else
+        ASSERT_NOT_REACHED();
+
+    size_t index = tracks->find(track);
     if (index == notFound)
         return;
-    m_tracks.remove(index);
+    tracks->remove(index);
+
 }
 
 const AtomicString& TextTrackList::interfaceName() const
