Source/WebCore/html/track/TextTrackList.h
@@ -87,7 +87,8 @@ private:
     Timer<TextTrackList> m_pendingEventTimer;
 
     EventTargetData m_eventTargetData;
-    Vector<RefPtr<TextTrack> > m_tracks;
+    Vector<RefPtr<TextTrack> > m_addTrackTracks;
+    Vector<RefPtr<TextTrack> > m_elementTracks;
     
     int m_dispatchingEvents;
 };
